<resources>
    <string name="app_name">Android Detective Server</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_read_sms">Read sms</string>
    <string name="menu_settings">Settings</string>


    <string-array name="navigation_drawer_items_array">
        <item>Settings</item>
        <item>Read sms</item>
        <item>Calls</item>
        <item>Camera pictures</item>
        <item>Contacts</item>
        <item>Gps</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_call_info">Read call info</string>
    <string name="date">Date</string>
    <string name="send_to">Send to</string>
    <string name="send_text">Send text</string>
    <string name="notes">Notes</string>
    <string name="android_detective_server">Android Detective Server</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_down">Swipe down</string>
    <string name="swipe_up">SWIPE_UP</string>
    <string name="camera_pictures">Camera pictures</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="contacts">Contacts</string>
    <string name="json_blob_api_url">Json blob API url:</string>
    <string name="rabbit_mq_uri">RabbitMQ URI:</string>
    <string name="rabbit_mq_queue_name">RabbitMQ Queue name:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="fields_cannot_be_blank">Fields cannot be blank</string>
    <string name="not_valid_url">Not valid uri</string>
    <string name="not_valid_rabbitmq_url">Not valid RabbitMQ Url</string>
    <string name="save_sucessfull">Save successful!</string>
    <string name="setting_are_restored_from_database">Settings are restored from datasbase.</string>
    <string name="file_was_deleted_succesfull">Succesfull delete on file: </string>
    <string name="delete_picture">Delete picture?</string>
    <string name="do_you_confirm_deleting_selected_picture">Do you confirm deleting selected picture?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_places">Gps places</string>
</resources>
