<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"

              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <!--  android:background="@drawable/border"-->

    <TextView
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDateLabel"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/send_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSendToLabel"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/send_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSendTextLabel"
        android:layout_weight="1"/>

</LinearLayout>